[package]
name = "gpt3-hangman"
version = "0.1.0"
authors = ["Nathan Broadbent <git@ndbroadbent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rand_pcg = "0.3.0"
regex = "1.4.5"
serde_yaml = "0.8.17"
